# qtpaintapp

./: README.md
midchat2D/: CMakeLists.txt  Canvas.cpp  Canvas.h  c_cpp_properties.json  main.cpp  main.h  midchat2D.code-workspace
midchat2D/qt-everywhere/: .tag
